--- a/css/styles.css
+++ b/css/styles.css
@@ -133,11 +133,10 @@ body {
 .btn-primario {
   background: transparent;
   position: relative;
-  padding: 5px 15px;
   display: flex;
   align-items: center;
-  font-size: 17px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 500;
   text-decoration: none;
   cursor: pointer;
   border: 1px solid rgb(253, 82, 58);
@@ -147,10 +146,14 @@ body {
   color: rgb(253, 82, 58);
   transition: color 0.3s 0.1s ease-out;
   text-align: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.btn-primario span {
-  margin: 10px;
+.link {
+  margin-left: 10px;
 }
 
 .btn-primario::before {
@@ -169,11 +172,12 @@ body {
   text-align: center;
   transition: box-shadow 0.5s ease-out;
   z-index: -1;
+  text-decoration: none;
 }
 
 .btn-primario:hover {
   color: #fff;
-  border: 1px solid rgb(253, 82, 58);;
+  border: 1px solid rgb(253, 82, 58);
 }
 
 .btn-primario:hover::before {
