--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ body {
   font-size: 30px;
 }
 
-/*prueba de botton*/
+/*botton primario*/
 
 .btn-primario {
   background: transparent;
@@ -189,7 +189,6 @@ body {
   background-color: #FD523A;
   transition: all 0.5s;
 }
-
 
 .btn-segundario {
   background-color: transparent;
