--- a/css/styles.css
+++ b/css/styles.css
@@ -246,16 +246,23 @@ font-size: 18px;
   color:#FD523A;
 }
 
+#tools  {
+ 
+  background-color: #FD523A;
+  height: 600px;
+}
+
 .container-tools {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
-
 
 .container-title {
   display:flex;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
+  margin-top: 10px;
 }
 
 .margin {
@@ -270,7 +277,7 @@ font-size: 18px;
 }
 
 .page-section {
-margin-top:100px;
+margin-top:200px;
 
 }
 
@@ -432,7 +439,7 @@ hr {
    
   }
 
-  .Image-hero {
+  .Image-space {
     mix-blend-mode: lighten ;
     margin-top: 20%;
     width: 100%;
@@ -440,8 +447,8 @@ hr {
   }
 
   .titles {
-
   font-size: 40px;
+  margin: 10px;
   }
 }
 @media (min-width: 320px) and (max-width: 768px)  {
@@ -865,10 +872,80 @@ hr {
     margin-left: 50px;
   }
 
+/* design digital styles */
 
 
+.container-space {
+display: flex;
+align-items:flex-end;
+}
+
+.item-space-social {
+  margin-bottom: 50px;
+}
 
 
+.button {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  border: none;
+  background: linear-gradient(120deg, #833ab4, #fd1d1d, #fcb045);
+  position: relative;
+  z-index: 0;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  margin-left: 10px;
+  margin-top: 20px;
+  transition: 0.1s;
+}
+.button svg {
+  color: white;
+  width: 20px;
+  height: 20px;
+  z-index: 9;
+}
+
+.button:nth-child(1)  {
+  background: #FD523A;
+}
+
+.button:nth-child(2) {
+  background: #FD523A;
+}
+
+.button:nth-child(3) {
+  background: #FD523A;
+}
+
+.button:nth-child(4) {
+  background: #FD523A;
+}
+
+.button:active {
+  transform: scale(0.85);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  background-color: #212121;
+  border-radius: 50px;
+  z-index: -1;
+  border: 0px solid rgba(255, 255, 255, 0.411);
+  transition: 0.4s;
+}
+
+.button:hover::before {
+  width: 0px;
+  height: 0px;
+}
+
+/*final digital styles*/
 
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
