--- a/css/componentes.css
+++ b/css/componentes.css
@@ -2,117 +2,117 @@
 
 
 .btn-primary {
-   
-        display: flex;
-        width: fit-content;
-        align-items: center;
-        background: transparent;
-        font-size: 20px;
-        font-weight: 500;
-        text-decoration: none;
-        cursor: pointer;
-        border: 1px solid rgb(253, 82, 58);
-        border-radius: 100px;
-        color: rgb(253, 82, 58);
-        text-align: center;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        padding-left: 20px;
-        padding-right: 20px;
 
-      }
-      
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid rgb(253, 82, 58);
+  border-radius: 100px;
+  color: rgb(253, 82, 58);
+  text-align: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
 
-      .btn-primary::before {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-        border-radius: 50%;
-        display: block;
-        width: 20em;
-        height: 20em;
-        left: -5em;
-        text-align: center;
-        transition: box-shadow 0.5s ease-out;
-        z-index: -1;
-        text-decoration: none;
-      }
-      
-      .btn-primary:hover {
-        color: #fff;
-        border: 1px solid rgb(253, 82, 58);
-      }
-      
-      .btn-primary:hover::before {
-        box-shadow: inset 0 0 0 10em rgb(253, 82, 58);
-      }
-      
-      
-      .btn-primary:hover {
-        background-color: #FD523A;
-        transition: all 0.5s;
-      }      
+}
+
+
+.btn-primary::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border-radius: 50%;
+  display: block;
+  width: 20em;
+  height: 20em;
+  left: -5em;
+  text-align: center;
+  transition: box-shadow 0.5s ease-out;
+  z-index: -1;
+  text-decoration: none;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  border: 1px solid rgb(253, 82, 58);
+}
+
+.btn-primary:hover::before {
+  box-shadow: inset 0 0 0 10em rgb(253, 82, 58);
+}
+
+
+.btn-primary:hover {
+  background-color: #FD523A;
+  transition: all 0.5s;
+}
 
 
 /* Estilos para el botón segundario */
 
 .btn-secundary {
-   
-    display: flex;
-    width: fit-content;
-    align-items: center;
-    background: transparent;
-    font-size: 15px;
-    font-weight: 400px;
-    text-decoration: none;
-    cursor: pointer;
-    border: 1px solid rgb(250, 250, 250);
-    border-radius: 100px;
-    color: rgb(250, 250, 250);
-    text-align: center;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 10px;
-  }
-  
 
-  .btn-secundary::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    border-radius: 50%;
-    display: block;
-    width: 20em;
-    height: 20em;
-    left: -5em;
-    text-align: center;
-    transition: box-shadow 0.5s ease-out;
-    z-index: -1;
-    text-decoration: none;
-  }
-  
-  .btn-secundary:hover {
-    color: rgb(52, 53, 58);
-    border: 1px solid rgb(250, 250, 250);
-  }
-  
-  .btn-secundary:hover::before {
-    box-shadow: inset 0 0 0 10em rgb(250, 250, 250);
-  }
-  
-  
-  .btn-secundary:hover {
-    background-color: rgb(250, 250, 250);
-    transition: all 0.5s;
-  }      
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  background: transparent;
+  font-size: 15px;
+  font-weight: 400px;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid rgb(250, 250, 250);
+  border-radius: 100px;
+  color: rgb(250, 250, 250);
+  text-align: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 10px;
+}
+
+
+.btn-secundary::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border-radius: 50%;
+  display: block;
+  width: 20em;
+  height: 20em;
+  left: -5em;
+  text-align: center;
+  transition: box-shadow 0.5s ease-out;
+  z-index: -1;
+  text-decoration: none;
+}
+
+.btn-secundary:hover {
+  color: rgb(52, 53, 58);
+  border: 1px solid rgb(250, 250, 250);
+}
+
+.btn-secundary:hover::before {
+  box-shadow: inset 0 0 0 10em rgb(250, 250, 250);
+}
+
+
+.btn-secundary:hover {
+  background-color: rgb(250, 250, 250);
+  transition: all 0.5s;
+}
 
 /* Estilos para linea social media */
 
@@ -121,20 +121,20 @@
   flex-direction: column;
   width: 30%;
   align-items: center;
-  justify-content:center;
-  margin-bottom: 10%; 
+  justify-content: center;
+  margin-bottom: 10%;
 }
 
-  .item-line-social-media {
-    height: 180px;
-    width: 8px;
-    background-color: #FD523A;
-    border-radius: 10px;
+.item-line-social-media {
+  height: 180px;
+  width: 8px;
+  background-color: #FD523A;
+  border-radius: 10px;
 }
 
 
 .item-social-media-icon {
-    padding-top: 15px;
+  padding-top: 15px;
 }
 
 /* Estilos para icons social media */
@@ -142,45 +142,68 @@
 
 .icon-social-media {
 
-       
-        background-color: transparent;
-        color: #fff;
-        font-size: 24px;
-        font-weight: 700;
-        opacity: 1;
-        transition: opacity 0.25s;
-        z-index: 2;
-        padding: 0.25rem;
-        cursor: pointer;
-      }
-      
-      .icon-social-media::before {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-        border-radius: 50%;
-        display: block;
-        width: 20em;
-        height: 20em;
-        left: -5em;
-        text-align: center;
-        transition: box-shadow 0.5s ease-out;
-        z-index: -1;
-        text-decoration: none;
-      }
-      
-      .icon-social-media:hover {
-        color: #FD523A;
-      }
-      
-      
-      .icon-social-media:hover {
-        transition: all 0.5s;
-      }      
+
+  background-color: transparent;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+  opacity: 1;
+  transition: opacity 0.25s;
+  z-index: 2;
+  padding: 0.25rem;
+  cursor: pointer;
+}
+
+.icon-social-media::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border-radius: 50%;
+  display: block;
+  width: 20em;
+  height: 20em;
+  left: -5em;
+  text-align: center;
+  transition: box-shadow 0.5s ease-out;
+  z-index: -1;
+  text-decoration: none;
+}
+
+.icon-social-media:hover {
+  color: #FD523A;
+}
+
+
+.icon-social-media:hover {
+  transition: all 0.5s;
+}
+
+
+@media (min-width: 320px) and (max-width: 768px) {
+  .container-social-media {
+    position: absolute;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5%;
+    margin-left: 25%;
+  }
+
+  .item-line-social-media {
+    display: none;
+  }
+
+
+  .item-social-media-icon {
+    padding-right: 5px;
+    padding-top: 0%;
+  }
   
+}
+
 
 /*card seccion tools*/
 
@@ -189,39 +212,28 @@
   background-color: #f5f5f5;
   flex-direction: column;
   justify-content: center;
-  align-items:flex-start;
+  align-items: flex-start;
   max-width: 90%;
-  max-height: 90%;
   border-radius: 20px;
   margin: 50px;
-  z-index: 7;
-  padding: 10px;
+  padding: 15px;
 
 }
 
 .item-card-img {
-  width: 97%;
-  height: 300px;
-  max-height: 70%;
-  margin: 15px;
+  width: 100%;
   border-radius: 20px;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 
 .item-card-tools {
-  margin-left: 15px;
-  margin-top: 30px;
-  margin-bottom: 15px;
+  margin: 15px;
   color: #34353a;
 }
 
 .parraphs-card {
-  color:#3d3e42;
+  color: #3d3e42;
   font-size: 18px;
-  
-  }
 
-
-
-
+}
