--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,8 @@ body {
 
 
 .Image-hero {
+  width: 100%;
+  margin-top: 50px;
   mix-blend-mode: lighten ;
 }
 
@@ -421,7 +423,12 @@ hr {
 /* media query home */
 
 @media (min-width: 1024px) and (max-width: 1980px)  
-{  /* Add your styles for screens up to 1980px wide here */
+{ 
+  .home {
+    margin-top: 10%;
+  }
+
+  /* Add your styles for screens up to 1980px wide here */
   .home-social-list {
     top: 60%;
   }
@@ -452,6 +459,11 @@ hr {
   }
 }
 @media (min-width: 320px) and (max-width: 768px)  {
+
+  .home {
+    width: 100%;
+  }
+
   .home-social-list {
     display: inline-block;
     right: 20px;
@@ -481,9 +493,10 @@ hr {
   }
 
   .Image-hero {
-    margin-top: 0%;
+    margin-top: 10px;
     width: 100%;
     height: 100%;
+    mix-blend-mode: lighten
   }
 
   .titles {
@@ -503,7 +516,9 @@ hr {
   .btn-primario {
     margin-top: 5%;
   }
+
 }
+
 
 
 
