--- a/css/componentes.css
+++ b/css/componentes.css
@@ -205,16 +205,22 @@
 
 /*card seccion tools*/
 
+
+.container-ppl {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 50px;
+}
+
 .container-card-tools {
   display: flex;
   background-color: #f5f5f5;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  max-width: 90%;
   border-radius: 20px;
-  margin: 50px;
-  padding: 15px;
+  padding: 30px;
 
 }
 
