--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,17 @@ body {
   color: #FD523A;
 }
 
+.card-title {
+  color: #FD523A;
+  margin-top: 20px;
+}
+
+.parraphs-card {
+  color: #3d3e42;
+  font-size: 18px;
+  margin-top: 20px;
+}
+
 .titles {
   color: #F4F3FF;
   font-size: 45px;
@@ -221,12 +232,6 @@ body {
   -moz-box-shadow: 0px 15px 20px 0px rgba(0,0,0,0.25);
 }
 
-.about {
-  margin-top: -50px;
-  color: #ffffff;
-
-}
-
 
 .Image-hero {
   width: 100%;
@@ -234,33 +239,37 @@ body {
   mix-blend-mode: lighten ;
 }
 
-.parraphs {
-color:#FAFAFA;
-font-size: 18px;
-
-}
 
 .lista {
   list-style-type:none;
 }
+
 .icon-list {
   margin-right: 10px;
   color:#FD523A;
 }
 
 #tools  {
-  margin: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #FD523A;
   height: auto;
 }
 
 
-
-.container-tools {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+/* Ajuste para las tarjetas de herramientas */
+.tool-card {
+  max-width: 100px; /* Tamaño máximo de cada imagen */
+  width: 60px;
+  margin-left: 50px;
+  margin-top: 50px;
 }
+.tool-image {
+  width: 100%; /* Ajuste de la imagen para llenar el contenedor */
+  height: auto;
+  object-fit: contain;
+}
+
 
 .container-title {
   display:flex;
@@ -11714,7 +11723,10 @@ html {
 }
 
 #portfolio {
-  margin-top: 50px;
+  margin-top: 60px;
 }
 
+#contact {
+  margin-top: 50px;
+}
 
